--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+google==3.0.0
 termcolor==1.1.0
-tldextract==3.1.0
+tldextract==3.0.2
 colorama==0.4.4
 requests==2.25.0
-google==3.0.0
 dnspython==2.0.0
+GitPython==3.1.11
