--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-tldextract==3.1.0
-tabulate==0.8.9
 colorama==0.4.4
+tldextract==3.1.0
 google==3.0.0
 requests==2.25.1
 termcolor==1.1.0
+dnsdumpster==0.8
+tabulate==0.8.9
 beautifulsoup4==4.9.3
 dnspython==2.1.0
 GitPython==3.1.17
